BUG#11753184 - USED_MEM::LEFT NOT SET IN ALLOC_ROOT FOR DEBUG BUILDS Bug#44582 USED_MEM::left not set in alloc_root for debug builds

Remove HAVE_purify, use HAVE_VALGRIND instead.

Keep existing behaviour: do not pre-allocate memory in alloc_root()
when code is instrumented with valgrind.
Doing the same thing for ASAN instrumentation revealed a bug in find_uniq_filename()